# csv-to-usv-rust-crate

./: Cargo.toml  README.md
benches/: example.rs
src/: examples.rs  lib.rs  main.rs
src/app/: args.rs  clap.rs  log.rs
tests/: command.rs  command_io.rs  command_with_delimiter.rs  command_with_layout.rs  command_with_separators.rs  command_with_style.rs  custom_delimiter_test.rs  default_delimiter_test.rs  delimiter_test.rs  integration_test.rs  style_test.rs  testing.rs
tests/common/: mod.rs
